#417 FIX : clean up